--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,10 +2,10 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Chamados Expert</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/icon.jpg">
   <script src="https://kit.fontawesome.com/91fc8c843c.js" crossorigin="anonymous"></script>
 </head>
 <body>
